# imx6ull-lab

./: .env.template  .gitignore  .gitmodules  Makefile
app/buildroot/: Config.in  external.desc  external.mk
app/buildroot/package/lvgl-app/: Config.in  lvgl-app.mk
app/buildroot/package/lvgl-app/source/: CMakeLists.txt
app/buildroot/package/lvgl-app/source/inc/: lv_conf.h
app/buildroot/package/lvgl-app/source/src/: main.c
app/ledc/: start.s
app/leds/: Makefile  README.md  led.s
custom/: uboot-fragment.cfg
docker/: Dockerfile  build.sh
patches/buildroot/: add_myir_6ulx_iot_defconfig.patch  fix-uboot-pack.patch  myir_6ulx_iot_defconfig
patches/uboot/: 0001-set-memory-256MB.patch  imx6ull-myir-mys-6ulx-eval.dts
scripts/: buildroot-make.sh
